@@ -1,0 +1,16 @@
+{
+  "data": [
+    {
+      "timestamp": "2016-10-01T00:00:00+02:00",
+      "value": 59.759999999999998
+    },
+    {
+      "timestamp": "2016-11-01T00:00:00+01:00",
+      "value": 33.709620000000001
+    },
+    {
+      "timestamp": "2016-12-01T00:00:00+01:00",
+      "value": 24.437856
+    }
+  ]
+}
